--- a/.github/workflows/phpstan_baseline.yml
+++ b/.github/workflows/phpstan_baseline.yml
@@ -2,8 +2,8 @@ name: 'PHPStan baseline'
 
 on:
   # Every day we want to refresh the baseline
-  schedule:
-    - cron: '0 12 * * *'
+  #schedule:
+  #  - cron: '0 12 * * *'
 
   # We want to be able to manually refresh the baseline too
   workflow_dispatch:
